Fixed Article Alignment

--- a/views/main.sass
+++ b/views/main.sass
@@ -31,6 +31,7 @@ a
 .article
   @include row
   .date
+    @include shift(1)
     @include span-columns(1)
     .day
       @include span-columns(2 of 2)
